--- a/scss_7/_leftside.scss
+++ b/scss_7/_leftside.scss
@@ -8,7 +8,7 @@
     z-index: 6;
     scrollbar-width: thin;
     border-width: 1px 0px;
-    background: #1b1b1b;
+    background: #212832;
     margin-top: 15px;
 
     &::-webkit-scrollbar {
@@ -234,6 +234,7 @@
             }
 
             &:active,&.active {
+                padding-bottom: 5px;
 
                 .smallList {
                     display: block;
@@ -367,7 +368,6 @@
 
                 &:last-child {
                     border-radius: 0px 0px 5px 5px;
-                    margin-bottom: 5px;
                 }
 
                 &:hover,&:active,&.active {
