--- a/css_7/style.css
+++ b/css_7/style.css
@@ -8184,8 +8184,8 @@ main .bg {
   color: #ffffff;
 }
 .myself .recordbar:hover div .remind, .myself .recordbar:active div .remind, .myself .recordbar.active div .remind {
-  background: #1f54ab;
-  color: #ffffff;
+  background: #feb300;
+  color: #212832;
 }
 .myself .recordbar.open {
   border-color: #feb300;
@@ -8245,33 +8245,6 @@ main .bg {
 }
 .myself .recordbox.display {
   display: block;
-}
-.myself .recordbox .bettingRecord {
-  box-shadow: 0px 0px 0px 1px #c8c8c8, 0px 2px 5px 0px #00000049;
-}
-.myself .recordbox .bettingRecord tr {
-  background: #ffffff;
-  border-bottom: solid 1px #c8c8c8;
-}
-.myself .recordbox .bettingRecord tr th {
-  background: #ffffff;
-  color: #39547f;
-}
-.myself .recordbox .bettingRecord tr th .line {
-  background: #c8c8c8;
-}
-.myself .recordbox .bettingRecord tr th .arrow {
-  background-position-y: 100%;
-}
-.myself .recordbox .bettingRecord tr td {
-  border-right: solid 1px #c8c8c8;
-  color: #1b1b1b;
-}
-.myself .recordbox .bettingRecord tr td .teamName, .myself .recordbox .bettingRecord tr td .vs {
-  color: #1b1b1b;
-}
-.myself .recordbox .bettingRecord tr td .odd {
-  color: #ce1427;
 }
 .myself .helpbar {
   width: 1150px;
@@ -8561,7 +8534,6 @@ main .bg {
 .myself .onlineCilent .onlineroom {
   width: 100%;
   height: 25%;
-  text-align: right;
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
@@ -8597,16 +8569,18 @@ main .bg {
   background-position-x: 100%;
 }
 .myself .onlineCilent .onlineroom textarea {
-  width: 100%;
-  height: 80px;
-  padding: 0px 15px;
+  width: 97%;
+  height: 82px;
+  padding: 10px 15px;
   border-color: transparent;
+  border-radius: 5px;
   outline: none;
   resize: none;
   box-sizing: border-box;
   font-size: 15px;
-  background: transparent;
+  background: #212832;
   color: #ffffff;
+  margin: 0px auto;
 }
 .myself .onlineCilent .onlineroom textarea::placeholder {
   color: #9b9b9b;
@@ -8616,12 +8590,13 @@ main .bg {
 .myself .onlineCilent .onlineroom .send {
   width: 90px;
   height: 36px;
-  margin: 0px 20px 20px 0px;
+  margin: 10px 30px 10px 0px;
   background: linear-gradient(to top, #feb300 0%, #ffc63d 100%);
   color: #2e3f57;
   border-radius: 5px;
   border-color: transparent;
   font-size: 15px;
+  float: right;
   border: none;
   box-shadow: 0px 2px 5px 0px #00000049;
 }
@@ -8717,6 +8692,7 @@ main .bg {
   z-index: 2;
   color: #ffffff;
   box-sizing: border-box;
+  box-shadow: 0px 2px 5px 0px #00000080;
 }
 .minetopfix .fixbar .editbut, .minetopfix .fixbar .cancelbut, .minetopfix .fixbar .delbut {
   display: none;
