--- a/css_6/style.css
+++ b/css_6/style.css
@@ -5358,7 +5358,7 @@ main .bg {
 }
 .topfix .nor .gameName {
   display: inline-block;
-  color: #ff4719;
+  color: #ffc13c;
   font-size: 13px;
 }
 .topfix .nor .reWeb {
