--- a/scss_6/_type.scss
+++ b/scss_6/_type.scss
@@ -209,7 +209,7 @@
         //遊戲標題
         .gameName {
             display: inline-block;
-            color: #ff4719;
+            color: #ffc13c;
             font-size: 13px;
         }
 
