--- a/scss_7/_type.scss
+++ b/scss_7/_type.scss
@@ -321,6 +321,7 @@
                 -webkit-appearance:none;
                 padding: 5px 30px 3px 5px;
                 border: solid 1px #feb300;
+                font-size: 13px;
 
                 span {
                     display: none;
