--- a/scss_7/_type.scss
+++ b/scss_7/_type.scss
@@ -1058,7 +1058,7 @@
         text-align: center;
 
         span {
-            font-size: 14px;
+            font-size: 15px;
             color: #212832;
             line-height: 54px;
             font-weight: bold;
@@ -1103,10 +1103,12 @@
     //主內容
     .signupbox {
         width: 100%;
-        height: 265px;
-        background: #212832;
+        height: 305px;
+        background: #2e3f57;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
+        border: solid 1px #feb300;
+        box-sizing: border-box;
 
         div {
             width: 48%;
@@ -1145,15 +1147,14 @@
                 width: 180px;
                 height: 36px;
                 margin-right: 10px;
-                background: #ffffff;
+                background: #bfbfbf;
                 color: #212832;
                 border-radius: 5px;
-                font-size: 16px;
+                font-size: 15px;
                 font-weight: bold;
 
                 &:hover,&:active,&.active {
-                    background: #feb300;
-                    color: #ffffff;
+                    background: #ffffff;
                 }
 
                 &:last-child {
@@ -2755,7 +2756,7 @@
         text-align: center;
 
         span {
-            font-size: 14px;
+            font-size: 15px;
             color: #212832;
             line-height: 54px;
             font-weight: bold;
@@ -2799,11 +2800,14 @@
     //主內容
     .remindBox {
         width: 100%;
-        height: 110px;
-        background: #212832;
+        height: 140px;
+        background: #2e3f57;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
         text-align: center;
+        border: solid 1px #feb300;
+        border-top: none;
+        box-sizing: border-box;
 
         p {
             font-size: 16px;
@@ -2819,7 +2823,7 @@
             background: linear-gradient(to bottom,#feb300 0%,#c98000 100%);
             border: none;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 15px;
             font-weight: bold;
             box-shadow: 1px 2px 8px 0px #00000049;
             &:hover,&:active,&.active {
