--- a/css_6/style.css
+++ b/css_6/style.css
@@ -2755,11 +2755,12 @@ main .bg {
   width: 7%;
   font-size: 13px;
   line-height: 15px;
-  color: #b27a2b;
+  color: #fb770a;
 }
 .conversionBoard tr td.title {
   width: 9%;
   background: #2f2f2f;
+  color: #ffc13c;
 }
 
 .bettingRemind {
