--- a/scss_6/_table.scss
+++ b/scss_6/_table.scss
@@ -2884,11 +2884,12 @@
 			width: 7%;
 			font-size: 13px;
 			line-height: 15px;
-			color: #b27a2b;
+			color: #fb770a;
 
 			&.title {
 				width: 9%;
 				background: #2f2f2f;
+				color: #ffc13c;
 			}
 		}
 	}
