--- a/css_7/style.css
+++ b/css_7/style.css
@@ -1318,7 +1318,7 @@ main .bg {
   padding: 8px 0px;
   vertical-align: middle;
   word-break: break-all;
-  color: #febd00;
+  color: #ffffff;
   line-height: 18px;
 }
 .playBoard tr td:nth-of-type(1) p:nth-of-type(1) {
@@ -1382,7 +1382,7 @@ main .bg {
   animation: btnFlashing 1.5s linear 0s infinite;
 }
 .playBoard tr td button span {
-  color: #ffcc41;
+  color: #afafaf;
   font-size: 12px;
 }
 .playBoard tr td button.up::before {
@@ -1433,7 +1433,7 @@ main .bg {
 .playBoard tr td a.tbimg3 {
   width: auto;
   height: auto;
-  color: #fedd00;
+  color: #15ae56;
   font-size: 13px;
 }
 .playBoard tr td.overGame {
@@ -2761,10 +2761,13 @@ main .bg {
 }
 
 .bettingRemind {
-  width: 100%;
+  width: 96%;
   height: auto;
   border-collapse: collapse;
   background: #2f3f58;
+  margin: 15px auto;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 1px #feb300;
 }
 .bettingRemind tr th {
   padding: 7px 15px;
@@ -6328,7 +6331,7 @@ main .bg {
   line-height: 50px;
   color: #212832;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 15px;
 }
 .norbetting .norcancelbtn {
   position: absolute;
@@ -6366,6 +6369,9 @@ main .bg {
   height: auto;
   border-radius: 0px 0px 3px 3px;
   overflow: hidden;
+  background: #212832;
+  border: solid 1px #feb300;
+  box-sizing: border-box;
 }
 .norbetting .nor_bettingbox .bettingtotal {
   width: 100%;
@@ -6443,7 +6449,7 @@ main .bg {
   float: left;
   margin: 0px 3px 10px 3px;
   border-radius: 5px;
-  font-size: 17px;
+  font-size: 15px;
   color: #ffffff;
   font-weight: bold;
   line-height: 36px;
@@ -6483,7 +6489,7 @@ main .bg {
 .norbettingCheck .barname {
   line-height: 50px;
   color: #212832;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: bold;
 }
 .norbettingCheck .checkCancelBtn {
@@ -6522,6 +6528,10 @@ main .bg {
   height: auto;
   border-radius: 0px 0px 3px 3px;
   overflow: hidden;
+  border: solid 1px #feb300;
+  border-top: none;
+  box-sizing: border-box;
+  background: #212832;
 }
 .norbettingCheck .bettingbox .bettingtotal {
   width: 100%;
@@ -6624,10 +6634,12 @@ main .bg {
 }
 .bettingbar::before {
   content: "";
-  width: 8px;
-  height: 11px;
+  width: 7px;
+  height: 10px;
   position: absolute;
-  background: url("../images/forCss_7/arrow_w.png");
+  background: url("../images/forCss_7/arrow_bl2.png");
+  background-position-y: 100%;
+  background-size: 100%;
   right: 40px;
   top: 20px;
   transform: rotate(90deg);
@@ -6649,7 +6661,7 @@ main .bg {
   margin: 13px 0px 0px 40px;
   line-height: 28px;
   font-size: 17px;
-  color: #feb300;
+  color: #ffffff;
   position: relative;
   text-align: center;
   /*for IE 9*/
@@ -6916,7 +6928,7 @@ main .bg {
   margin: 13px 0px 0px 15px;
   line-height: 28px;
   font-size: 17px;
-  color: #feb300;
+  color: #ffffff;
   position: relative;
   text-align: center;
   /*for IE 9*/
@@ -6969,7 +6981,7 @@ main .bg {
   transform: rotate(-45deg);
 }
 .bettingCheck .bettingbox {
-  width: 580px;
+  width: 578px;
   height: 430px;
   margin-top: 50px;
   background: #19202a;
@@ -6977,6 +6989,7 @@ main .bg {
   overflow: hidden;
   cursor: default;
   position: absolute;
+  border: solid 1px #feb300;
 }
 .bettingCheck .bettingbox .bettingwindow {
   width: 100%;
@@ -7215,12 +7228,14 @@ main .bg {
 .calculator .calbox {
   width: 100%;
   height: 430px;
-  background: #19202a;
+  background: #2e3f57;
   box-sizing: border-box;
   border-radius: 0px 0px 3px 3px;
   position: relative;
   overflow: hidden;
-  border-top: solid 1px #dedede;
+  border: solid 1px #feb300;
+  border-top: none;
+  box-sizing: border-box;
   padding: 0px 30px;
 }
 .calculator .calbox .top {
@@ -7257,6 +7272,7 @@ main .bg {
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
+  border: solid 1px #feb300;
 }
 .calculator .calbox .mid table {
   width: 100%;
@@ -7266,7 +7282,7 @@ main .bg {
   background: #212832;
 }
 .calculator .calbox .mid table tr:nth-child(even) {
-  background: #2f3f58;
+  background: #2e3f57;
 }
 .calculator .calbox .mid table tr th {
   font-size: 14px;
