--- a/scss_7/_type.scss
+++ b/scss_7/_type.scss
@@ -1456,7 +1456,7 @@
         line-height: 50px;
         color: #212832;
         font-weight: bold;
-        font-size: 14px;
+        font-size: 15px;
     }
 
     .norcancelbtn {
@@ -1497,6 +1497,9 @@
         height: auto;
         border-radius: 0px 0px 3px 3px;
         overflow: hidden;
+        background: #212832;
+        border: solid 1px #feb300;
+        box-sizing: border-box;
 
         //總額顯示
         .bettingtotal { 
@@ -1586,7 +1589,7 @@
                     float: left;
                     margin: 0px 3px 10px 3px;
                     border-radius: 5px;
-                    font-size: 17px;
+                    font-size: 15px;
                     color: #ffffff;
                     font-weight: bold;
                     line-height: 36px;
@@ -1634,7 +1637,7 @@
     .barname {
         line-height: 50px;
         color: #212832;
-        font-size: 14px;
+        font-size: 15px;
         font-weight: bold;
     }
 
@@ -1677,12 +1680,16 @@
         height: auto;
         border-radius: 0px 0px 3px 3px;
         overflow: hidden;
+        border: solid 1px #feb300;
+        border-top: none;
+        box-sizing: border-box;
+        background: #212832;
         
         //總額顯示
         .bettingtotal {
             width: 100%;
             height: 45px;
-            background: #2f3f58 ;
+            background: #2f3f58;
 
             div {
                 display: block;
@@ -1795,10 +1802,12 @@
 
     &::before {
         content: "";
-        width: 8px;
-        height: 11px;
+        width: 7px;
+        height: 10px;
         position: absolute;
-        background: url('../images/forCss_7/arrow_w.png');
+        background: url('../images/forCss_7/arrow_bl2.png');
+        background-position-y: 100%;
+        background-size: 100%;
         right: 40px;
         top: 20px;
         transform: rotate(90deg);
@@ -1824,7 +1833,7 @@
         margin: 13px 0px 0px 40px;
         line-height: 28px;
         font-size: 17px;
-        color: #feb300;
+        color: #ffffff;
         position: relative;
         text-align: center;
 
@@ -2138,7 +2147,7 @@
         margin: 13px 0px 0px 15px;
         line-height: 28px;
         font-size: 17px;
-        color: #feb300;
+        color: #ffffff;
         position: relative;
         text-align: center;
 
@@ -2195,7 +2204,7 @@
 
     //投注內容
     .bettingbox {
-        width: 580px;
+        width: 578px;
         height: 430px;
         margin-top: 50px;
         background: #19202a;
@@ -2203,6 +2212,7 @@
         overflow: hidden;
         cursor: default;
         position: absolute;
+        border: solid 1px #feb300;
 
         //table視窗
         .bettingwindow {
@@ -2483,12 +2493,14 @@
     .calbox {
         width: 100%;
         height: 430px;
-        background: #19202a;
+        background: #2e3f57;
         box-sizing: border-box;
         border-radius: 0px 0px 3px 3px;
         position: relative;
         overflow: hidden;
-        border-top: solid 1px #dedede;
+        border: solid 1px #feb300;
+        border-top: none;
+        box-sizing: border-box;
         padding: 0px 30px;
 
         .top {
@@ -2531,6 +2543,7 @@
             overflow-x: hidden;
             overflow-y: auto;
             scrollbar-width: thin;
+            border: solid 1px #feb300;
 
             table {
                 width: 100%;
@@ -2540,7 +2553,7 @@
                     background: #212832;
 
                     &:nth-child(even) {
-                        background: #2f3f58;
+                        background: #2e3f57;
                     }
                     
                     th {
