--- a/scss_6/_leftside.scss
+++ b/scss_6/_leftside.scss
@@ -155,7 +155,7 @@
                 margin: 0px auto;
 
                 &:nth-of-type(1),&:nth-of-type(5),&:nth-of-type(9) {
-                    border-bottom: solid 1px #b5833b;
+                    border-bottom: solid 1px #a88335;
                 }
 
                 &:hover,&:active,&.active {
