--- a/scss_6/_myself.scss
+++ b/scss_6/_myself.scss
@@ -15,12 +15,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #ffffff;
+        background: #1b1b1b;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #999999;
+        background: linear-gradient(to bottom,#ff4b33 0%,#d8001f 98%);
         border-radius: 10px;
     }
 
@@ -385,12 +385,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #ffffff;
+                background: #1b1b1b;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: #999999;
+                background: linear-gradient(to bottom,#ff4b33 0%,#d8001f 98%);
                 border-radius: 10px;
             }
 
@@ -480,12 +480,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #ffffff;
+                background: #1b1b1b;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: #999999;
+                background: linear-gradient(to bottom,#ff4b33 0%,#d8001f 98%);
                 border-radius: 10px;
             }
 
