--- a/scss_6/_rightside.scss
+++ b/scss_6/_rightside.scss
@@ -56,7 +56,7 @@
                 position: absolute;
                 width: 94%;
                 height: 1px;
-                background: #b5833b;
+                background: #a88335;
                 bottom: -1px;
                 left: 50%;
                 transform: translateX(-50%);
@@ -88,7 +88,7 @@
                 position: relative;
                 color: #fb770a;
                 margin-bottom: 3px;
-                border-bottom: solid 1px #b5833b;
+                border-bottom: solid 1px #a88335;
 
                 &:last-child {
                     margin: 0px;
@@ -167,7 +167,7 @@
                 position: absolute;
                 width: 94%;
                 height: 1px;
-                background: #b5833b;
+                background: #a88335;
                 bottom: -1px;
                 left: 50%;
                 transform: translateX(-50%);
@@ -275,7 +275,7 @@
                 font-size: 14px;
                 float: left;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px #775017;
+                border: solid 1px #a88335;
                 border-bottom: none;
 
                 &:hover,&:active,&.active {
@@ -296,19 +296,21 @@
                 width: 100%;
                 height: 100%;
                 background: #181818;
-                color: #ff4719;
+                color: #ffc13c;
                 font-size: 12px;
                 text-align: left;
                 padding-left: 15px;
                 position: relative;
+                border: solid 1px #a88335;
+                border-bottom: none;
 
                 &::before {
                     content: "";
                     position: absolute;
                     width: 96%;
                     height: 1px;
-                    background: #b5833b;
-                    bottom: -1px;
+                    background: #a88335;
+                    bottom: 0px;
                     left: 50%;
                     transform: translateX(-50%);
                 }
@@ -336,7 +338,7 @@
             overflow-x: hidden;
             scrollbar-width: thin;
             box-sizing: border-box;
-            border: solid 1px #775017;
+            border: solid 1px #a88335;
             border-width: 0px 1px;
 
             &::-webkit-scrollbar {
@@ -345,12 +347,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #181818;
+                background: #1b1b1b;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to bottom, #ff4b33 0%, #d8001f 98%);
+                background: linear-gradient(to bottom,#ff4b33 0%,#d8001f 98%);
                 border-radius: 10px;
             }
 
@@ -371,7 +373,7 @@
                     overflow: hidden;
                     cursor: pointer;
                     background: #252525;
-                    border-bottom: solid 1px #b5833b;
+                    border-bottom: solid 1px #a88335;
 
                     &:nth-of-type(1) {
                         margin-top: 5px;
@@ -410,7 +412,7 @@
                         .gameName {
                             color: #ff4719;
                             background: #3c3c3c;
-                            border-bottom: solid 1px #b5833b;
+                            border-bottom: solid 1px #a88335;
                         }
 
                         .games {
@@ -533,7 +535,7 @@
             overflow-x: hidden;
             scrollbar-width: thin;
             background: #181818;
-            border: solid 1px #775017;
+            border: solid 1px #a88335;
             box-sizing: border-box;
             border-width: 0px 1px;
 
@@ -543,12 +545,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #181818;
+                background: #1b1b1b;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to bottom, #ff4b33 0%, #d8001f 98%);
+                background: linear-gradient(to bottom,#ff4b33 0%,#d8001f 98%);
                 border-radius: 10px;
             }
 
