--- a/scss_6/_table.scss
+++ b/scss_6/_table.scss
@@ -2796,7 +2796,7 @@
 			font-size: 12px;
 
 			&.waiting {
-				color: #8f702d;
+				color: #d78f3a;
 			}
 
 			&.sus {
@@ -2897,43 +2897,47 @@
 
 //投注窗小窗
 .bettingRemind {
-	width: 100%;
+	width: 96%;
 	height: auto;
 	border-collapse: collapse;
-	background: #f2f2f2;
+	background: #252525;
+	margin: 15px auto;
+	border-radius: 5px;
+	box-shadow: 0px 0px 0px 1px #ffc13c;
 
 	tr {
 
 		th {
 			padding: 7px 15px;
-			color: #333333;
+			color: #ffc13c;
 			font-size: 13px;
-			border-bottom: solid 1px #dadada;
+			border-bottom: solid 1px #a88335;
 			text-align: left;
 		}
 
 		td {
 			width: 50%;
 			vertical-align: middle;
-			color: #333333;
+			color: #ffffff;
 			padding: 15px;
 			font-size: 13px;
+			text-align: left;
 
 			.remind {
 				float: right;
 
 				.odds {
 					margin-left: 5px;
-					color: #0955f0;
+					color: #fb770a;
 				}
 			}
 
 			.leagendName {
-				color: #666666;
+				color: #ffffff;
 			}
 
 			&:last-child {
-				border-left: solid 1px #d8d8d8;
+				border-left: solid 1px #a88335;
 				line-height: 18px;
 			}
 		}
